# I2C

./: CMakeLists.txt  README.md
cmake/: FindSDL2TTF.cmake
include/: core.h  game.h
src/: core.c  game.c
